plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.library.audiobooks'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '23'
targetCompatibility = '23'

//repositories {
//	mavenCentral()
//}
//java {
//	toolchain {
//		languageVersion = JavaLanguageVersion.of(21)
//	}
//}

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/snapshot' }
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'io.micrometer:micrometer-tracing-bridge-brave'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'org.postgresql:postgresql'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	// Lombok
	compileOnly 'org.projectlombok:lombok:1.18.30'
	annotationProcessor 'org.projectlombok:lombok:1.18.30'
	implementation 'commons-beanutils:commons-beanutils:1.9.4'  // Add this for BeanUtils

}

//test {
//	useJUnitPlatform()
//}
bootRun {
	jvmArgs = ['--enable-native-access=ALL-UNNAMED']
}
